# nihil

./: .envrc  .gitignore  Cargo.toml  build.py  default.nix  flake.nix  justfile  last_modified.toml  shell.nix
anima/: .envrc  .gitignore  justfile  shell.nix
anima-math-renderer/: Cargo.toml  anima-math-renderer.nix  default.nix  lib.rs  shell.nix
anima/example/: changes.anima  page.anima
anima/example/echoes/spherical-cmb/: page.anima
anima/example/styles/: main.css  math.css
anima/example/ts-array-variance-standup/: page.anima
anima/src/: codec.odin  etternal.anima  example.anima  exparr.odin  formatters.odin  gen.odin  lexer.odin  main.odin  markup.odin  mem.odin  page.anima  page.odin  parser.odin  pretty.odin  site.odin  stats.odin  tree.odin  utils.odin
anima/src/example/: changes.anima  page.anima  styles.css
anima/src/example/echoes/: page.anima
anima/src/example/echoes/spherical-cmb/: page.anima
anima/src/example/echoes/ts-array-variance-standup/: page.anima  page.anima.old
anima/src/example/nested/: page.anima2
anima/src/example/ts-array-variance-standup/: page.anima
anima/src/nested/: page.anima
anima/vim/ftdetect/: anima.vim
anima/vim/ftplugin/: anima.lua
anima/vim/syntax/: anima.vim
anima_old/src/: lexer.odin  main.odin  markup.odin  parser.odin  pretty.odin
anima_old/src/stdlib/: etternal.anima  example2.anima  prelude.anima
highlighter/: .envrc  Cargo.toml  default.nix  main.rs  shell.nix
math-renderer/: .envrc  Cargo.toml  default.nix  main.rs  shell.nix
moonythm/: .envrc  default.nix  justfile  shell.nix
moonythm/src/: styles.css
moonythm/tooling/: htmlvalidate.json  stylelintrc.json
nihil/: .envrc  .gitignore  default.nix  lmodern.nix  nihil.cabal  nihil.nix  shell.nix  state.toml
nihil-highlighter/: .gitignore  Cargo.toml  default.nix  main.rs  shell.nix
nihil-math-renderer/: Cargo.toml  assets.nix  default.nix  main.rs  shell.nix
nihil/src/: Main.hs
nihil/src/Nihil/: Config.hs  Context.hs  Djot.hs  Highlight.hs  Math.hs  Route.hs  State.hs  Toml.hs  Tree.hs
nihil/src/Nihil/Content/: Config.hs  Find.hs  Html.hs  Rss.hs  Sitemap.hs
nihil/src/Nihil/File/: In.hs  Out.hs
nihil/src/Nihil/Page/: Find.hs  Meta.hs
nihil/templates/: aside.html  char-aside.html  long-aside.html  page.html  post-summary.html  post.html  table-of-contents.html
nix/: default.nix  lmodern-web.nix  moonythm-generator.nix  moonythm.nix
npins/: sources.json
public/: styles.css
scripts/: last_modified.sh
src/: generate.rs  html.rs  main.rs  metadata.rs  template.rs  tex.rs
src/templates/: aside.html  character-aside.html  long-aside.html  page.html  post-summary.html  post.html  table-of-contents.html
tooling/: htmltest.yml  htmlvalidate.json  package-lock.json  package.json
