[package]
name = "moonythm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
jotdown = "0.6.0"
pulldown-latex = "0.7.0"
serde = { version = "1.0.214", features = ["derive"] }
toml = "0.8.19"

# Waiting for https://github.com/rust-lang/rust/issues/109737
# before switching to the std version.
once_cell = "1.20.2"
chrono = { version = "0.4.38", features = ["serde"] }
tree-sitter = "0.24.3"
tree-sitter-rust = "0.23.0"
tree-sitter-highlight = "0.24.3"
tree-sitter-djot = { git="https://github.com/treeman/tree-sitter-djot", rev="eb31845d59b9ee8c1b2098e78e9ca72004bd1579" }
tree-sitter-html = "0.23.2"
sha2 = "0.10.8"
base64 = "0.22.1"
tree-sitter-typescript = "0.23.2"
