cabal-version:      3.0

name:               nihil
version:            0.1.0.0

license:            AGPL-3.0-or-later
license-file:       ../LICENSE
author:             prescientmoon
maintainer:         git@moonythm.dev
category:           Language
extra-doc-files:    CHANGELOG.md
build-type:         Simple

common warnings
    ghc-options: -Wall

executable nihil
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   src

    default-language: GHC2024
    default-extensions:
        , NoImplicitPrelude
        , BlockArguments
        , LiberalTypeSynonyms
        , DefaultSignatures
        , DeriveAnyClass
        , DerivingStrategies
        , UnicodeSyntax
        , DuplicateRecordFields
        , RecordWildCards
        , OverloadedRecordDot
        , OverloadedStrings
        , ViewPatterns
        , MultiWayIf

    other-modules:
        , Nihil.Toml
        , Nihil.Config
        , Nihil.Route
        , Nihil.State
        , Nihil.Djot
        , Nihil.Highlight
        , Nihil.File.In
        , Nihil.File.Out
        , Nihil.Gen.Text
        , Nihil.Gen.Page
        , Nihil.Gen.Xml
        , Nihil.Gen.Html
        , Nihil.Content.Config
        , Nihil.Context
        , Nihil.Content.Find
        , Nihil.Content.Html

    build-depends:
        , base       ^>=4.20.0.0
        , directory  ^>=1.3.9.0
        , djot       ^>=0.1.2.2
        , filepath   ^>=1.5.4.0
        , relude     ^>=1.2.0.0
        , time       ^>=1.14
        , tomland    ^>=1.3.3.3
        , file-embed ^>=0.0.16.0
        , process    ^>=1.6.26.1
        , texmath    ^>=0.12.10.3
        , xml        ^>=1.3.14

    mixins:
        base hiding (Prelude),
        relude (Relude as Prelude),
        relude
