cabal-version:      3.0

name:               nihil
version:            0.1.0.0

license:            AGPL-3.0-or-later
author:             prescientmoon
maintainer:         git@moonythm.dev
category:           Language
extra-doc-files:    CHANGELOG.md
build-type:         Simple

common warnings
    ghc-options: -Wall

executable nihil
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   src

    default-language: GHC2024
    default-extensions:
        , NoImplicitPrelude
        , BlockArguments
        , LiberalTypeSynonyms
        , DefaultSignatures
        , DeriveAnyClass
        , DerivingStrategies
        , UnicodeSyntax
        , DuplicateRecordFields
        , RecordWildCards
        , OverloadedRecordDot
        , OverloadedStrings
        , ViewPatterns
        , MultiWayIf
        , ImportQualifiedPost
        , FunctionalDependencies
        , UndecidableInstances

    other-modules:
        , Nihil.Toml
        , Nihil.Config
        , Nihil.Route
        , Nihil.State
        , Nihil.Djot
        , Nihil.File.In
        , Nihil.File.Out
        , Nihil.Tree
        , Nihil.Gen.Xml
        , Nihil.Highlight
        , Nihil.Math
        , Nihil.Page.Find
        , Nihil.Page.Meta
        , Nihil.Context
        , Nihil.Content.Sitemap
        , Nihil.Content.Rss
        , Nihil.Content.Html

    build-depends:
        , base        ^>=4.20.0.0
        , directory   ^>=1.3.8.3
        , djot        ^>=0.1.2.2
        , filepath    ^>=1.5.2.0
        , relude      ^>=1.2.0.0
        , time        ^>=1.12.2
        , tomland     ^>=1.3.3.3
        , file-embed  ^>=0.0.16.0
        , process     ^>=1.6.19.0
        , list-t      ^>=1.0.5.0

    mixins:
        base hiding (Prelude),
        relude (Relude as Prelude),
        relude
